objects/ODT_Product_Bundle__c.object
<CustomObject>
    <fields>
        <fullName>Bundle_ID__c</fullName>
        <label>Bundle ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Order__c</fullName>
        <label>Bundle Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bundle_Type__c</fullName>
        <label>Bundle Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CTX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SLF</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>GOVT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAMPAIGNEFFECTIVEDATE__c</fullName>
        <description>http://ent.jira.int.thomsonreuters.com/browse/DLT-19668</description>
        <label>CAMPAIGNEFFECTIVEDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CAMPAIGNEXPIRATIONDATE__c</fullName>
        <description>http://ent.jira.int.thomsonreuters.com/browse/DLT-19668</description>
        <label>CAMPAIGNEXPIRATIONDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CHANNEL__c</fullName>
        <description>ODT][INFORMATICA] Trial Products pull data load to Salesforce load to HYBRIS</description>
        <label>CHANNEL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>COMPANY_INDICATOR__c</fullName>
        <description>http://ent.jira.int.thomsonreuters.com/browse/DLT-19668</description>
        <label>COMPANY_INDICATOR</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>ODT Product Bundle</relationshipLabel>
        <relationshipName>On_Demand_Trial</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacts_User_Type__c</fullName>
        <inlineHelpText>Based on User type products should display in Rep initiated journey, for Ex if existing customer is belongs to same domain we need to select ECJSD 
If products want to display to existing customer for different domain need to select ECJND</inlineHelpText>
        <label>Contacts/User Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EXISTING_USER_SAME_DOMAIN</fullName>
                </value>
                <value>
                    <fullName>EXISTING_USER_NEW_DOMAIN</fullName>
                </value>
                <value>
                    <fullName>NET_NEW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hive9_Media_Code__c</fullName>
        <label>Hive9 Media Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Enabled_For_Sales_Rep_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Enabled For Sales Rep Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ONEPASSURL__c</fullName>
        <description>http://ent.jira.int.thomsonreuters.com/browse/DLT-19668</description>
        <label>ONEPASSURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PRODUCT_CLASSIFICATION_DESC__c</fullName>
        <description>http://ent.jira.int.thomsonreuters.com/browse/DLT-19668</description>
        <label>PRODUCT_CLASSIFICATION_DESC</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRODUCT_CLASSIFICATION_ID__c</fullName>
        <description>http://ent.jira.int.thomsonreuters.com/browse/DLT-19668</description>
        <label>PRODUCT_CLASSIFICATION_ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PRODUCT_DOMAIN__c</fullName>
        <description>http://ent.jira.int.thomsonreuters.com/browse/DLT-19668</description>
        <label>PRODUCT_DOMAIN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_ID__c</fullName>
        <label>Profile ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Promotion_Code__c</fullName>
        <label>SAP Promotion Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_TEMPLATE_USERID__c</fullName>
        <description>http://ent.jira.int.thomsonreuters.com/browse/DLT-19668</description>
        <label>SAP_TEMPLATE_USERID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIAL_PRODUCT_NAME__c</fullName>
        <description>DLT-19668</description>
        <label>TRIAL_PRODUCT_NAME</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trial_Expiry_Days__c</fullName>
        <label>Trial Expiry Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cellcode__c</fullName>
        <label>cellcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ODT Product Bundle</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Bundle_ID__c</columns>
        <columns>Contacts_User_Type__c</columns>
        <columns>Profile_ID__c</columns>
        <columns>Bundle_Type__c</columns>
        <columns>Business_Type__c</columns>
        <columns>cellcode__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Bundle_Order__c</columns>
        <columns>Campaign__c</columns>
        <columns>Hive9_Media_Code__c</columns>
        <columns>Is_Enabled_For_Sales_Rep_Trial__c</columns>
        <columns>Trial_Expiry_Days__c</columns>
        <columns>SAP_TEMPLATE_USERID__c</columns>
        <columns>SAP_Promotion_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ODT Product Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ODT Product Bundle</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>